--- a/docker_app/.dockerignore
+++ b/docker_app/.dockerignore
@@ -1,1 +1,13 @@
 .venv
+
+.git
+.gitignore
+.editorconfig
+
+# Compiled files
+**/.terraform/*
+*.tfstate
+*.tfstate.*
+
+# Module directory
+.terraform
